prev26/src/prev26lang/phase/synan/Prev26Parser.java
// Generated from Prev26Parser.g4 by ANTLR 4.13.2


    package prev26lang.phase.synan;
    
    import java.util.*;
    import prev26lang.common.report.*;
    import prev26lang.phase.lexan.*;
    import prev26lang.phase.abstr.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"doclint:missing", "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Prev26Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, AS=2, BOOL=3, DO=4, CHAR=5, ELSE=6, END=7, FALSE=8, FUN=9, IF=10, 
		INT=11, IN=12, LET=13, NIL=14, NONE=15, NOT=16, OR=17, SIZEOF=18, THEN=19, 
		TRUE=20, TYP=21, VAR=22, VOID=23, WHILE=24, POWER=25, LB=26, RB=27, LSB=28, 
		RSB=29, LP=30, RP=31, LE=32, GE=33, NE=34, EQ=35, LT=36, GT=37, MOD=38, 
		DIV=39, MUL=40, SUB=41, ADD=42, IS=43, DD=44, C=45, D=46, COMMENT=47, 
		WS=48, NAME=49, CINT=50, CCHAR=51, INVALID_CHAR=52, CSTRING=53, INVALID_STRING=54, 
		ANY=55;
	public static final int
		RULE_source = 0, RULE_prog = 1, RULE_prog_tail = 2, RULE_d = 3, RULE_fun_tail = 4, 
		RULE_params = 5, RULE_param_tail = 6, RULE_param = 7, RULE_t = 8, RULE_par_t = 9, 
		RULE_par_t_parse_id = 10, RULE_par_after_id = 11, RULE_non_id_t = 12, 
		RULE_basic_t = 13, RULE_array_t = 14, RULE_pointer_t = 15, RULE_object_t = 16, 
		RULE_comps = 17, RULE_comp_tail = 18, RULE_comp = 19, RULE_fun_t = 20, 
		RULE_t_list = 21, RULE_t_list_tail = 22, RULE_expr_list = 23, RULE_e_tail = 24, 
		RULE_e = 25, RULE_e_assign = 26, RULE_e_as = 27, RULE_as_tail = 28, RULE_e_or = 29, 
		RULE_or_tail = 30, RULE_e_and = 31, RULE_and_tail = 32, RULE_e_compare = 33, 
		RULE_compare_tail = 34, RULE_compare_op = 35, RULE_e_add = 36, RULE_add_tail = 37, 
		RULE_add_comp = 38, RULE_e_mul = 39, RULE_mul_tail = 40, RULE_mul_op = 41, 
		RULE_e_prefix = 42, RULE_prefix_op = 43, RULE_e_postfix = 44, RULE_postfix_tail = 45, 
		RULE_empty_expr_list = 46, RULE_e_basic = 47, RULE_e_const = 48, RULE_bool_const = 49, 
		RULE_void_const = 50, RULE_ptr_const = 51, RULE_e_sizeof = 52, RULE_e_let = 53, 
		RULE_e_while = 54, RULE_e_if = 55, RULE_if_tail = 56, RULE_c_int = 57, 
		RULE_opt_add_op = 58;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "prog", "prog_tail", "d", "fun_tail", "params", "param_tail", 
			"param", "t", "par_t", "par_t_parse_id", "par_after_id", "non_id_t", 
			"basic_t", "array_t", "pointer_t", "object_t", "comps", "comp_tail", 
			"comp", "fun_t", "t_list", "t_list_tail", "expr_list", "e_tail", "e", 
			"e_assign", "e_as", "as_tail", "e_or", "or_tail", "e_and", "and_tail", 
			"e_compare", "compare_tail", "compare_op", "e_add", "add_tail", "add_comp", 
			"e_mul", "mul_tail", "mul_op", "e_prefix", "prefix_op", "e_postfix", 
			"postfix_tail", "empty_expr_list", "e_basic", "e_const", "bool_const", 
			"void_const", "ptr_const", "e_sizeof", "e_let", "e_while", "e_if", "if_tail", 
			"c_int", "opt_add_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'as'", "'bool'", "'do'", "'char'", "'else'", "'end'", 
			"'false'", "'fun'", "'if'", "'int'", "'in'", "'let'", "'nil'", "'none'", 
			"'not'", "'or'", "'sizeof'", "'then'", "'true'", "'typ'", "'var'", "'void'", 
			"'while'", "'^'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'<='", "'>='", 
			"'!='", "'=='", "'<'", "'>'", "'%'", "'/'", "'*'", "'-'", "'+'", "'='", 
			"':'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "AS", "BOOL", "DO", "CHAR", "ELSE", "END", "FALSE", "FUN", 
			"IF", "INT", "IN", "LET", "NIL", "NONE", "NOT", "OR", "SIZEOF", "THEN", 
			"TRUE", "TYP", "VAR", "VOID", "WHILE", "POWER", "LB", "RB", "LSB", "RSB", 
			"LP", "RP", "LE", "GE", "NE", "EQ", "LT", "GT", "MOD", "DIV", "MUL", 
			"SUB", "ADD", "IS", "DD", "C", "D", "COMMENT", "WS", "NAME", "CINT", 
			"CCHAR", "INVALID_CHAR", "CSTRING", "INVALID_STRING", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Prev26Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    private Location loc(final Token tok) { return new Location((LexAn.LocLogToken)tok); }
	    private Location loc(final Locatable loc) { return new Location(loc); }
	    private Location loc(final Token tok1, final Token tok2) { return new Location((LexAn.LocLogToken)tok1, (LexAn.LocLogToken)tok2); }
	    private Location loc(final Token tok1, final Locatable loc2) { if (loc2 == null) return null; return new Location((LexAn.LocLogToken)tok1, loc2); }
	    private Location loc(final Locatable loc1, final Token tok2) { if (loc1 == null) return null; return new Location(loc1, (LexAn.LocLogToken)tok2); }
	    private Location loc(final Locatable loc1, final Locatable loc2) { if ((loc1 == null) || (loc2 == null)) return null; return new Location(loc1, loc2); }
	    private Location loc(final ParserRuleContext ctx) {
	        return loc(ctx.start, (ctx.stop == null) ? _input.LT(-1) : ctx.stop);
	    }

	    private <N extends AST.Node> N bind(N node, ParserRuleContext ctx) {
	        Abstr.locAttr.put(node, loc(ctx));
	        return node;
	    }

	    private <N extends AST.Node> N bind(N node, Locatable loc) {
	        Abstr.locAttr.put(node, loc(loc));
	        return node;
	    }

	    private <N extends AST.Node> N bind(N node, Token first, Token last) {
	        Abstr.locAttr.put(node, loc(first, last));
	        return node;
	    }

	    private <N extends AST.Node> N bind(N node, Token first, Locatable last) {
	        Abstr.locAttr.put(node, loc(first, last));
	        return node;
	    }

	    private <N extends AST.Node> N bind(N node, Locatable first, Token last) {
	        Abstr.locAttr.put(node, loc(first, last));
	        return node;
	    }

	    private <N extends AST.Node> N bind(N node, Locatable first, Locatable last) {
	        Abstr.locAttr.put(node, loc(first, last));
	        return node;
	    }

	    private AST.Expr packExprs(List<AST.Expr> exprs, ParserRuleContext ctx) {
	        if (exprs.size() == 1)
	            return bind(exprs.get(0), ctx);

	        AST.Nodes<AST.Expr> exprNodes = bind(new AST.Nodes<>(exprs), ctx);
	        return bind(new AST.Exprs(exprNodes), ctx);
	    }


	public Prev26Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public AST.Nodes<AST.FullDefn> ast;
		public ProgContext prog;
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Prev26Parser.EOF, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			((SourceContext)_localctx).prog = prog();
			setState(119);
			match(EOF);
			 ((SourceContext)_localctx).ast =  ((SourceContext)_localctx).prog.ast; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public AST.Nodes<AST.FullDefn> ast;
		public DContext d;
		public Prog_tailContext prog_tail;
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public Prog_tailContext prog_tail() {
			return getRuleContext(Prog_tailContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		 List<AST.FullDefn> defs = new ArrayList<>(); 
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			((ProgContext)_localctx).d = d();
			setState(123);
			((ProgContext)_localctx).prog_tail = prog_tail();

			          defs.add(((ProgContext)_localctx).d.ast);
			          defs.addAll(((ProgContext)_localctx).prog_tail.asts);
			          ((ProgContext)_localctx).ast =  bind(new AST.Nodes<>(defs), _localctx);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Prog_tailContext extends ParserRuleContext {
		public List<AST.FullDefn> asts;
		public DContext d;
		public Prog_tailContext prog_tail;
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public Prog_tailContext prog_tail() {
			return getRuleContext(Prog_tailContext.class,0);
		}
		public Prog_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog_tail; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitProg_tail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Prog_tailContext prog_tail() throws RecognitionException {
		Prog_tailContext _localctx = new Prog_tailContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prog_tail);
		 ((Prog_tailContext)_localctx).asts =  new ArrayList<>(); 
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
			case TYP:
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				((Prog_tailContext)_localctx).d = d();
				setState(127);
				((Prog_tailContext)_localctx).prog_tail = prog_tail();

				          _localctx.asts.add(((Prog_tailContext)_localctx).d.ast);
				          _localctx.asts.addAll(((Prog_tailContext)_localctx).prog_tail.asts);
				      
				}
				break;
			case EOF:
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DContext extends ParserRuleContext {
		public AST.FullDefn ast;
		public Token n;
		public TContext t;
		public ParamsContext params;
		public Fun_tailContext fun_tail;
		public TerminalNode TYP() { return getToken(Prev26Parser.TYP, 0); }
		public TerminalNode IS() { return getToken(Prev26Parser.IS, 0); }
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode NAME() { return getToken(Prev26Parser.NAME, 0); }
		public TerminalNode VAR() { return getToken(Prev26Parser.VAR, 0); }
		public TerminalNode DD() { return getToken(Prev26Parser.DD, 0); }
		public TerminalNode FUN() { return getToken(Prev26Parser.FUN, 0); }
		public TerminalNode LP() { return getToken(Prev26Parser.LP, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode RP() { return getToken(Prev26Parser.RP, 0); }
		public Fun_tailContext fun_tail() {
			return getRuleContext(Fun_tailContext.class,0);
		}
		public DContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_d; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitD(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DContext d() throws RecognitionException {
		DContext _localctx = new DContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_d);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(TYP);
				setState(134);
				((DContext)_localctx).n = match(NAME);
				setState(135);
				match(IS);
				setState(136);
				((DContext)_localctx).t = t();
				 ((DContext)_localctx).ast =  bind(new AST.TypDefn(((DContext)_localctx).n.getText(), ((DContext)_localctx).t.ast), _localctx); 
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				match(VAR);
				setState(140);
				((DContext)_localctx).n = match(NAME);
				setState(141);
				match(DD);
				setState(142);
				((DContext)_localctx).t = t();
				 ((DContext)_localctx).ast =  bind(new AST.VarDefn(((DContext)_localctx).n.getText(), ((DContext)_localctx).t.ast), _localctx); 
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				match(FUN);
				setState(146);
				((DContext)_localctx).n = match(NAME);
				setState(147);
				match(LP);
				setState(148);
				((DContext)_localctx).params = params();
				setState(149);
				match(RP);
				setState(150);
				match(DD);
				setState(151);
				((DContext)_localctx).t = t();
				setState(152);
				((DContext)_localctx).fun_tail = fun_tail();

				          if (((DContext)_localctx).fun_tail.body != null)
				              ((DContext)_localctx).ast =  bind(new AST.DefFunDefn(((DContext)_localctx).n.getText(), ((DContext)_localctx).params.ast, ((DContext)_localctx).t.ast, ((DContext)_localctx).fun_tail.body), _localctx);
				          else
				              ((DContext)_localctx).ast =  bind(new AST.ExtFunDefn(((DContext)_localctx).n.getText(), ((DContext)_localctx).params.ast, ((DContext)_localctx).t.ast), _localctx);
				      
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fun_tailContext extends ParserRuleContext {
		public AST.Expr body;
		public Expr_listContext expr_list;
		public TerminalNode IS() { return getToken(Prev26Parser.IS, 0); }
		public Expr_listContext expr_list() {
			return getRuleContext(Expr_listContext.class,0);
		}
		public Fun_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_tail; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitFun_tail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fun_tailContext fun_tail() throws RecognitionException {
		Fun_tailContext _localctx = new Fun_tailContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fun_tail);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IS:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(IS);
				setState(158);
				((Fun_tailContext)_localctx).expr_list = expr_list();
				 ((Fun_tailContext)_localctx).body =  packExprs(((Fun_tailContext)_localctx).expr_list.exprs, ((Fun_tailContext)_localctx).expr_list); 
				}
				break;
			case EOF:
			case FUN:
			case IN:
			case TYP:
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				 ((Fun_tailContext)_localctx).body =  null; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public AST.Nodes<AST.ParDefn> ast;
		public ParamContext param;
		public Param_tailContext param_tail;
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public Param_tailContext param_tail() {
			return getRuleContext(Param_tailContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_params);
		 List<AST.ParDefn> pars = new ArrayList<>(); 
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				((ParamsContext)_localctx).param = param(false);
				setState(165);
				((ParamsContext)_localctx).param_tail = param_tail(false);

				          pars.add(((ParamsContext)_localctx).param.ast);
				          pars.addAll(((ParamsContext)_localctx).param_tail.pars);
				          ((ParamsContext)_localctx).ast =  bind(new AST.Nodes<>(pars), _localctx);
				      
				}
				break;
			case RP:
				enterOuterAlt(_localctx, 2);
				{
				 ((ParamsContext)_localctx).ast =  bind(new AST.Nodes<>(pars), _localctx); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_tailContext extends ParserRuleContext {
		public boolean asComp;
		public List<AST.ParDefn> pars;
		public List<AST.CompDefn> compDefs;
		public ParamContext param;
		public Param_tailContext param_tail;
		public TerminalNode C() { return getToken(Prev26Parser.C, 0); }
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public Param_tailContext param_tail() {
			return getRuleContext(Param_tailContext.class,0);
		}
		public Param_tailContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Param_tailContext(ParserRuleContext parent, int invokingState, boolean asComp) {
			super(parent, invokingState);
			this.asComp = asComp;
		}
		@Override public int getRuleIndex() { return RULE_param_tail; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitParam_tail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_tailContext param_tail(boolean asComp) throws RecognitionException {
		Param_tailContext _localctx = new Param_tailContext(_ctx, getState(), asComp);
		enterRule(_localctx, 12, RULE_param_tail);
		 ((Param_tailContext)_localctx).pars =  new ArrayList<>(); ((Param_tailContext)_localctx).compDefs =  new ArrayList<>(); 
		try {
			setState(177);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case C:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				match(C);
				setState(172);
				((Param_tailContext)_localctx).param = param(_localctx.asComp);
				setState(173);
				((Param_tailContext)_localctx).param_tail = param_tail(_localctx.asComp);

				          if (_localctx.asComp) {
				              _localctx.compDefs.add(((Param_tailContext)_localctx).param.compDef);
				              _localctx.compDefs.addAll(((Param_tailContext)_localctx).param_tail.compDefs);
				          } else {
				              _localctx.pars.add(((Param_tailContext)_localctx).param.ast);
				              _localctx.pars.addAll(((Param_tailContext)_localctx).param_tail.pars);
				          }
				      
				}
				break;
			case RP:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public boolean asComp;
		public AST.ParDefn ast;
		public AST.CompDefn compDef;
		public Token n;
		public TContext t;
		public TerminalNode DD() { return getToken(Prev26Parser.DD, 0); }
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode NAME() { return getToken(Prev26Parser.NAME, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ParamContext(ParserRuleContext parent, int invokingState, boolean asComp) {
			super(parent, invokingState);
			this.asComp = asComp;
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param(boolean asComp) throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState(), asComp);
		enterRule(_localctx, 14, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			((ParamContext)_localctx).n = match(NAME);
			setState(180);
			match(DD);
			setState(181);
			((ParamContext)_localctx).t = t();

			          if (_localctx.asComp)
			              ((ParamContext)_localctx).compDef =  bind(new AST.CompDefn(((ParamContext)_localctx).n.getText(), ((ParamContext)_localctx).t.ast), ((ParamContext)_localctx).n, ((ParamContext)_localctx).t.ast);
			          else
			              ((ParamContext)_localctx).ast =  bind(new AST.ParDefn(((ParamContext)_localctx).n.getText(), ((ParamContext)_localctx).t.ast), _localctx);
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TContext extends ParserRuleContext {
		public AST.Type ast;
		public Basic_tContext basic_t;
		public Token n;
		public Array_tContext array_t;
		public Pointer_tContext pointer_t;
		public Object_tContext object_t;
		public Par_tContext par_t;
		public Basic_tContext basic_t() {
			return getRuleContext(Basic_tContext.class,0);
		}
		public TerminalNode NAME() { return getToken(Prev26Parser.NAME, 0); }
		public Array_tContext array_t() {
			return getRuleContext(Array_tContext.class,0);
		}
		public Pointer_tContext pointer_t() {
			return getRuleContext(Pointer_tContext.class,0);
		}
		public Object_tContext object_t() {
			return getRuleContext(Object_tContext.class,0);
		}
		public TerminalNode LP() { return getToken(Prev26Parser.LP, 0); }
		public Par_tContext par_t() {
			return getRuleContext(Par_tContext.class,0);
		}
		public TerminalNode RP() { return getToken(Prev26Parser.RP, 0); }
		public TContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Prev26ParserVisitor ) return ((Prev26ParserVisitor<? extends T>)visitor).visitT(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TContext t() throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_t);
		try {
			setState(203);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case CHAR:
			case INT:
			case VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(184);
				((TContext)_localctx).basic_t = basic_t();
				 ((TContext)_localctx).ast =  ((TContext)_localctx).basic_t.ast; 
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				((TContext)_localctx).n = match(NAME);
				 ((TContext)_localctx).ast =  bind(new AST.NameType(((TContext)_localctx).n.getText()), _localctx); 
				}
				break;
			case LSB:
				enterOuterAlt(_localctx, 3);
				{
				setState(189);
				((TContext)_localctx).array_t = array_t();
				 ((TContext)_localctx).ast =  ((TContext)_localctx).array_t.ast; 
				}
				break;
			case POWER:
				enterOuterAlt(_localctx, 4);
				{
				setState(192);
				((TContext)_localctx).pointer_t = pointer_t();
				 ((TContext)_localctx).ast =  ((TContext)_localctx).pointer_t.ast; 
				}
				break;
			case LB:
				enterOuterAlt(_localctx, 5);
				{
				setState(195);
				((TContext)_localctx).object_t = object_t();
				 ((TContext)_localctx).ast =  ((TContext)_localctx).object_t.ast; 
				}
				break;
			case LP:
				enterOuterAlt(_localctx, 6);
				{
				setState(198);
				match(LP);
				setState(199);
				((TContext)_localctx).par_t = par_t();
				setState(200);
				match(RP);
				 ((TContext)_localctx).ast =  bind(((TContext)_localctx).par_t.ast, _localctx); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
